arc-script/arc-script-test/compile/src/snapshots/ast@task-with-funs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-with-funs.arc
---
task Test(x: i32) ((~i32)) -> ((~i32)) {
    fun add(y: i32) {
        let z = x + y in
        z
    }
    on event => let x = add(event) in
    emit x
}

