arc-script/arc-script-test/compile/src/snapshots/ast@task_count.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_count.arc

---
task Count() (~i32) -> (~i32)) {
    state count: i32 = 0
    on event => count = count + 1;
    emit count
}

