arc-script/arc-script-test/compile/src/snapshots/ast@task_filter.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_filter.arc
---
task Filter(p: fun(i32) -> bool) ((~i32)) -> ((~i32)) {
    on event => if p(event) {
        emit event
    } else {
        unit
    }
}
fun main(stream0: ~i32) {
    let stream1 = Filter(|x| {
        x % 2 == 0
    })(stream0) in
    stream1
}

