arc-script/arc-script-test/compile/src/snapshots/ast@task_id.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_id.arc

---
task Identity() A(~i32 by i32) -> B(~i32 by i32) {
    on A(event) => emit B(event);
    
}
fun main(input: ~i32 by i32): ~i32 by i32 {
    val output = input | Identity();
    output
}

