arc-script/arc-script-test/compile/src/snapshots/ast@task_identity_untagged.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_identity_untagged.arc
---
task Identity() ((~i32)) -> ((~i32)) {
    on event => emit event
}
fun main(input: ~i32) {
    let output = Identity()(input) in
    output
}

