arc-script/arc-script-test/compile/src/snapshots/ast@task_keyby.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_keyby.arc

---
task KeyBy(keyfun: fun(i32): i32) ~i32 by i32 -> ~i32 by i32 {
    on event by key => {
        emit event by keyfun(event)
    }
}

