arc-script/arc-script-test/compile/src/snapshots/ast@task_map.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_map.arc

---
task Map(f: fun(i32) -> i32) ~i32 by i32 -> ~i32 by i32 {
    on event by key => {
        emit f(event) by key
    }
}
fun main(input: ~i32 by i32) -> ~i32 by i32 {
    let output = Map(|x| {
        x + 1
    })(input) in
    output
}

