arc-script/arc-script-test/compile/src/snapshots/ast@task_unique.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_unique.arc

---
task UniqueSet() ~i32 by i32 -> ~i32 by i32 {
    state set: {i32} = {}
    on event by key => {
        if event not in set {
            add set[event];
            emit event by key
        } else {
            unit
        }
    }
}
task UniqueMap() ~i32 by i32 -> ~i32 by i32 {
    state map: {i32 => unit} = {}
    on event by key => {
        if event not in map {
            map[event] = unit;
            emit event by key
        } else {
            unit
        }
    }
}

