arc-script/arc-script-test/compile/src/snapshots/ast@task_window.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_window.arc

---
task TumblingWindowSum() ~i32 by i32 -> ~i32 by i32 {
    state agg: i32 = 0
    timer unit
    startup trigger unit by 0 after 60
    timeout unit by key => {
        emit agg by key;
        agg = 0;
        trigger unit by key after 60
    }
    on event by key => {
        agg = agg + event
    }
}

