arc-script/arc-script-test/compile/src/snapshots/ast@task_with_funs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/task_with_funs.arc
---
task Test(x: i32) ((~i32)) -> ((~i32)) {
    fun add(y: i32) {
        let z = x + y in
        z
    }
    on event => emit add(event)
}

