arc-script/arc-script-test/compile/src/snapshots/dfg@basic_pipe.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/basic_pipe.arc
---

